deployment_manifest/dev/dev-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: dev-mysql
  template:
    metadata:
      labels:
        component: dev-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
