deployment_manifest/dev/dev-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: dev-server-deploymnet
spec:
  replicas: 1
  selector: 
    matchLabels:
      component: dev-server
  template:
    metadata:
      labels:
        component: dev-server
    spec:
      containers:
        - name: dev-server
          image: letiendat152/devops-server:141
          ports:
            - containerPort: 4000
