deployment_manifest/dev/dev-mysql-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-mysql-cluster-ip-service
spec:
  type: NodePort
  selector:
    component: dev-mysql
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 31000
