deployment_manifest/dev/dev-server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: dev-server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: dev-server 
  ports:
    - port: 4000
      targetPort: 4000
